fix: input field overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 body {
